[metadata]
name = kabbes_password_creator
version = 0.0.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = Create random passwords; edit this file 'description' to name the repository.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes-account-manager/
project_urls =
    GitHub = https://github.com/jameskabbes/password_creator
    Documentation = https://jameskabbes.github.io/password_creator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    kabbes_py_starter
    kabbes_dir_ops   

[options.packages.find]
where = src